--- a/css/style.css
+++ b/css/style.css
@@ -121,16 +121,17 @@ h6 {
 }
 
 a {
+  color: #850f0f;
   transition: all 0.3s ease 0s;
   text-decoration: none;
 }
 
 a:hover {
-  color: #3EC1D5;
-  text-decoration: none;
+   text-decoration: none;
 }
 
 a:active, a:hover {
+  color: #a82727;
   outline: 0 none;
 }
 
@@ -148,7 +149,7 @@ body {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #3EC1D5;
+  background: #a82727;
   color: #fff;
   padding: 6px 12px 9px 12px;
   font-size: 16px;
@@ -165,13 +166,13 @@ body {
 }
 
 .back-to-top:focus {
-  background: #3EC1D5;
+  background: #a82727;
   color: #fff;
   outline: none;
 }
 
 .back-to-top:hover {
-  background: #3cd6ed;
+  background: #de4949;
   color: #fff;
 }
 
@@ -202,12 +203,12 @@ div#preloader {
 }
 
 ::-moz-selection {
-  background: #3EC1D5;
+  background: #a82727;
   text-shadow: none;
 }
 
 ::selection {
-  background: #3EC1D5;
+  background: #a82727;
   text-shadow: none;
 }
 
@@ -314,7 +315,7 @@ div#preloader {
 }
 
 .main-menu ul.navbar-nav li a:hover {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .navbar {
@@ -414,7 +415,7 @@ div#preloader {
 }
 
 .sticky-logo h1 span {
-  color: #3ec1d5;
+  color: #a82727;
 }
 .stick .main-menu ul.navbar-nav li.active > a::after {
   border: 1px solid #fff;
@@ -490,7 +491,7 @@ div#preloader {
 }
 
 .single-well ul li i {
-  color: #3EC1D5;
+  color: #a82727;
   padding-right: 10px;
   font-size: 12px;
 }
@@ -522,7 +523,7 @@ div#preloader {
 }
 
 .services-details:hover h4, .services-details:hover .services-icon {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .row.second-row {
@@ -622,7 +623,7 @@ div#preloader {
 }
 
 .faq-details h4.check-title a.active, .faq-details a.active span.acc-icons::before {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .faq-details a.active span.acc-icons::before {
@@ -688,7 +689,7 @@ div#preloader {
 
 .tab-menu ul li.active a, .tab-menu ul li.hover a, .tab-menu ul li.focus a {
   border-bottom: 1px solid #fff;
-  color: #3EC1D5 !important;
+  color: #a82727 !important;
 }
 
 .tab-menu .nav-tabs {
@@ -783,7 +784,7 @@ div#preloader {
 }
 
 .suscribe-input button {
-  background: #3ec1d5 none repeat scroll 0 0;
+  background: #a82727 none repeat scroll 0 0;
   border: medium none;
   border-radius: 0 20px 20px 0;
   color: #fff;
@@ -796,7 +797,7 @@ div#preloader {
 
 .suscribe-input button:hover {
   background: #fff none repeat scroll 0 0;
-  color: #3ec1d5;
+  color: #a82727;
 }
 
 /*----------------------------------------
@@ -881,7 +882,7 @@ div#preloader {
 }
 
 .email-news .email_button>button:hover {
-  background: #3EC1D5;
+  background: #a82727;
   border: 1px solid #fff;
   color: #fff;
 }
@@ -891,7 +892,7 @@ div#preloader {
 }
 
 .team-left-icon ul li a:hover {
-  color: #3EC1D5;
+  color: #a82727;
   background: #fff;
   border: 2px solid #fff;
 }
@@ -968,8 +969,8 @@ div#preloader {
 
 .team-social-icon ul li a:hover {
   color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
+  border: 1px solid #a82727;
+  background: #a82727;
 }
 
 .team-content {
@@ -1015,7 +1016,7 @@ div#preloader {
 }
 
 .work-left-text {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #a82727 none repeat scroll 0 0;
 }
 
 .work-left-text {
@@ -1097,8 +1098,8 @@ div#preloader {
 }
 
 .project-menu li a.active, .project-menu li a:hover {
-  border-color: #3EC1D5;
-  background: #3EC1D5;
+  border-color: #a82727;
+  background: #a82727;
   color: #fff;
   text-decoration: none;
 }
@@ -1267,7 +1268,7 @@ div#preloader {
   position: absolute;
   right: 50px;
   top: 12px;
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .pri_table_list button {
@@ -1304,7 +1305,7 @@ div#preloader {
 }
 
 .saleon {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #a82727 none repeat scroll 0 0;
   color: #fff;
   font-size: 13px;
   font-weight: 700;
@@ -1333,8 +1334,8 @@ div#preloader {
 }
 
 .active>button {
-  background: #3EC1D5 none repeat scroll 0 0;
-  border: 1px solid #3EC1D5;
+  background: #a82727 none repeat scroll 0 0;
+  border: 1px solid #a82727;
   color: #fff;
   transition: 0.4s;
 }
@@ -1442,7 +1443,7 @@ div#preloader {
 }
 
 .testimonial-carousel.owl-carousel.owl-theme .owl-controls .owl-dots div.owl-dot.active span {
-  background: #3EC1D5;
+  background: #a82727;
 }
 
 .testi-text.text-center>h6 {
@@ -1458,7 +1459,7 @@ div#preloader {
 }
 
 .guest-rev>a {
-  color: #3EC1D5;
+  color: #a82727;
   font-size: 14px;
 }
 
@@ -1571,7 +1572,7 @@ div#preloader {
 }
 
 .single-blog .ready-btn:hover {
-  border: 1px solid #3EC1D5;
+  border: 1px solid #a82727;
   color: #fff;
 }
 
@@ -1580,7 +1581,7 @@ div#preloader {
 --------------------------------*/
 
 .suscribe-area {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #a82727 none repeat scroll 0 0;
   padding: 30px 0;
 }
 
@@ -1602,7 +1603,7 @@ div#preloader {
 .sus-btn {
   background: #fff none repeat scroll 0 0;
   border: 2px solid #fff;
-  color: #3EC1D5;
+  color: #a82727;
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
@@ -1614,7 +1615,7 @@ div#preloader {
 }
 
 .sus-btn:hover {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #a82727 none repeat scroll 0 0;
   border: 2px solid #fff;
   color: #fff;
 }
@@ -1674,13 +1675,13 @@ div#preloader {
 
 .contact-form button[type=submit]:hover {
   color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
+  border: 1px solid #a82727;
+  background: #a82727;
 }
 
 .contact-form  #sendmessage {
-  color: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  color: #a82727;
+  border: 1px solid #a82727;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1770,7 +1771,7 @@ div#preloader {
 }
 
 .footer-logo h2 span {
-  color: #3ec1d5;
+  color: #a82727;
 }
 
 .footer-icons ul li {
@@ -1801,7 +1802,7 @@ div#preloader {
 }
 
 .footer-contacts p span {
-  color: #3EC1D5;
+  color: #a82727;
   font-weight: 700;
 }
 
@@ -1815,8 +1816,8 @@ div#preloader {
 }
 
 .popular-tag ul li a:hover, .footer-icons ul li a:hover {
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #a82727;
+  border: 1px solid #a82727;
   color: #fff;
 }
 
@@ -1844,7 +1845,7 @@ div#preloader {
 
 .copyright-text a:hover {
   text-decoration: underline;
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .copyright-text a {
@@ -1857,7 +1858,7 @@ div#preloader {
 }
 
 .copyright a, .credits a {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .credits {
@@ -1960,7 +1961,7 @@ div#preloader {
 }
 
 .search-option button:hover {
-  color: #3ec1d5;
+  color: #a82727;
 }
 
 .left-blog h4 {
@@ -2020,8 +2021,8 @@ div#preloader {
 
 .ready-btn:hover {
   color: #fff;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #a82727;
+  border: 1px solid #a82727;
   text-decoration: none;
 }
 
@@ -2039,7 +2040,7 @@ div#preloader {
 }
 
 .pst-content p a:hover, .left-blog ul li a:hover {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .blog-page .single-blog {
@@ -2110,7 +2111,7 @@ div#preloader {
 }
 
 .entry-meta span a:hover {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .post-information .entry-meta {
@@ -2132,7 +2133,7 @@ div#preloader {
 
 .entry-content blockquote {
   background: #fff none repeat scroll 0 0;
-  border-left: 5px solid #3EC1D5;
+  border-left: 5px solid #a82727;
   font-size: 17.5px;
   font-style: italic;
   margin: 0 0 20px 40px;
@@ -2140,8 +2141,8 @@ div#preloader {
 }
 
 .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
-  background-color: #3EC1D5;
-  border-color: #3EC1D5;
+  background-color: #a82727;
+  border-color: #a82727;
   color: #fff;
   cursor: default;
   z-index: 3;
@@ -2181,8 +2182,8 @@ div#preloader {
 }
 
 .sharing-icon a:hover {
-  color: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  color: #a82727;
+  border: 1px solid #a82727;
 }
 
 .single-blog .author-avatar {
@@ -2311,7 +2312,7 @@ span.email-notes {
 
 .comment-respond input[type="submit"] {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #3ec1d5;
+  border: 1px solid #a82727;
   border-radius: 20px;
   box-shadow: none;
   color: #444;
@@ -2333,13 +2334,13 @@ span.email-notes {
 }
 
 .comments-content-wrap span a:hover {
-  color: #3EC1D5;
+  color: #a82727;
 }
 
 .comment-respond input[type=submit]:hover {
-  border: 1px solid #3EC1D5;
+  border: 1px solid #a82727;
   color: #fff;
-  background: #3EC1D5;
+  background: #a82727;
 }
 
 .single-blog .blog-pagination {
