--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 ---
-title: Top Slider
-order: 1
+title: Integrated Solutions
+layout: default
 ---
 <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
@@ -83,3 +83,4 @@ order: 1
         </div>
 </div>
 </div>
+{{ content }}
