--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -1,27 +1,31 @@
-<section id="services" class="services">
+<div id="services" class="services-area area-padding">
     <div class="container">
-        <div class="section-title" data-aos="fade-up">
-            <h2>{{ page.title }}</h2>
-            <p>{{ page.heading }}</p>
-        </div>
         <div class="row">
-            <div class="col-lg-6 order-2 order-lg-1">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="section-headline services-head text-center">
+                    <h2>{{ page.title }}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="services-contents">
                 {% for service in page.services %}
-                    <div class="icon-box mt-5 mt-lg-0"
-                    data-aos="fade-up"
-                    data-aos-delay="{{ service.order | minus: 1 | times: 100 }}">
-                        <i class="bx bx-{{ service.icon }}"></i>
-                        <h4>{{ service.heading }}</h4>
-                        <p>{{ service.content }}</p>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="about-move">
+                            <div class="services-details">
+                                <div class="single-services">
+                                    <a class="services-icon" href="#">
+                                        <i class="fa fa-{{ service.icon }}"></i>
+                                    </a>
+                                    <h4>{{ service.heading }}</h4>
+                                    <p>{{ service.content }}</p>
+                                </div>
+                            </div>
+                            <!-- end about-details -->
+                        </div>
                     </div>
                 {% endfor %}
             </div>
-            <div
-                class="image col-lg-6 order-1 order-lg-2"
-                style="background-image: url('{{ page.image-link }}');"
-                data-aos="fade-left"
-                data-aos-delay="100">
-            </div>
         </div>
     </div>
-</section>
+</div>
