--- a/_includes/knight_default.html
+++ b/_includes/knight_default.html
@@ -37,17 +37,15 @@
 </head>
 
 <body>
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets_knight/img/hero-logo.png" alt=""></a>
-      <h1 data-aos="zoom-in">Integrated Solutions</h1>
-      <h2 data-aos="fade-up">Choose better simply because we exist.</h2>
-      <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
-    </div>
-  </section><!-- End Hero -->
-
+<!-- ======= Hero Section ======= -->
+<section id="hero">
+  <div class="hero-container">
+    <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets_knight/img/hero-logo.png" alt=""></a>
+    <h1 data-aos="zoom-in">Integrated Solutions</h1>
+    <h2 data-aos="fade-up">Choose better simply because we exist.</h2>
+    <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
+  </div>
+</section><!-- End Hero -->
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
@@ -56,7 +54,7 @@
         <a href="index.html"><img src="assets_knight/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
-      {% include navigation_knight.html %}
+      {% include knight_navigation.html %}
 
     </div>
   </header><!-- End Header -->
