--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,7 @@
-  <html lang="en">
+{% if site.bootstrapmade %}
+{% include {{ site.bootstrapmade }}_default.html %}
+{% else %}
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Integrated Solutions</title>
@@ -221,7 +224,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
               -->
-              Website Based on Theme by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Lovingly hacked together by <a href="https://www.linkedin.com/in/ardyhash">Ardy Hashem</a>
             </div>
           </div>
         </div>
@@ -254,3 +257,5 @@
 </body>
 
 </html>
+
+{% endif %}
