--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -1,3 +1,6 @@
+{% if site.bootstrapmade %}
+{% include {{ site.bootstrapmade }}_{{ page.layout }}.html %}
+{% else %}
 <div id="services" class="services-area area-padding">
     <div class="container">
         <div class="row">
@@ -29,3 +32,4 @@
         </div>
     </div>
 </div>
+{% endif %}
