--- a/_layouts/stats.html
+++ b/_layouts/stats.html
@@ -1,3 +1,6 @@
+{% if site.bootstrapmade %}
+{% include {{ site.bootstrapmade }}_{{ page.layout }}.html %}
+{% else %}
 <!-- our-skill-area start -->
 <div class="our-skill-area fix hidden-sm">
     <div class="test-overly"></div>
@@ -30,3 +33,4 @@
     </div>
   </div>
   <!-- our-skill-area end -->
+  {% endif %}
