--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,3 +1,6 @@
+{% if site.bootstrapmade %}
+{% include {{ site.bootstrapmade }}_{{ page.layout }}.html %}
+{% else %}
 <!-- Start team Area -->
 <div id="team" class="our-team-area area-padding">
     <div class="container">
@@ -44,4 +47,4 @@
     </div>
   </div>
   <!-- End Team Area -->
-  
+  {% endif %}
