--- a/_includes/knight/faq.html
+++ b/_includes/knight/faq.html
@@ -11,8 +11,9 @@
         <li data-aos="fade-up" data-aos-delay="{{ faq.order | minus: 1 | times: 100 }}">
           <a data-bs-toggle="collapse"
           class="collapsed"
-          data-bs-target="#faq{{ faq.order }}"
-          >{{ faq.question }}<i class="bx bx-chevron-down icon-show"></i>
+          data-bs-target="#faq{{ faq.order }}">
+          {{ faq.question }}
+          <i class="bx bx-chevron-down icon-show"></i>
           <i class="bx bx-x icon-close"></i></a>
           <div id="faq{{ faq.order }}" class="collapse" data-bs-parent=".faq-list">
             <p>{{ faq.answer }}</p>
