--- a/_includes/knight/services.html
+++ b/_includes/knight/services.html
@@ -18,10 +18,54 @@
             </div>
             <div
                 class="image col-lg-6 order-1 order-lg-2"
-                style="background-image: url('{{ page.image-link }}');"
+                style="background-image: url('{{ page.img }}');"
                 data-aos="fade-left"
                 data-aos-delay="100">
             </div>
         </div>
     </div>
 </section>
+
+<!-- ======= Featured Section ======= -->
+<section id="featured" class="featured">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6" data-aos="fade-right">
+                <div class="tab-content">
+                    {% assign i = 0 %}
+                    {% for feature in page.featured %}
+                        {% assign i = i | plus: 1 %}
+                        {% if i == 1 %}
+                    <div class="tab-pane active show" id="tab-{{ i }}">
+                        {% else %}
+                    <div class="tab-pane" id="tab-{{ i }}">
+                        {% endif %}
+                        <figure>
+                            <img src="{{ feature.img }}" alt="" class="img-fluid">
+                        </figure>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="col-lg-6 mt-4 mt-lg-0" data-aos="fade-left">
+                <ul class="nav nav-tabs flex-column">
+                    {% assign i = 0 %}
+                    {% for feature in page.featured %}
+                        {% assign i = i | plus: 1 %}
+                        {% if i == 1 %}
+                            <li class="nav-item">
+                                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-{{ i }}">
+                        {% else %}
+                            <li class="nav-item mt-2">
+                                <a class="nav-link" data-bs-toggle="tab" href="#tab-{{ i }}">
+                        {% endif %}
+                                <h4>{{ feature.heading }}</h4>
+                                <p>{{ feature.content }}</p>
+                                </a>
+                            </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+</section><!-- End Featured Section -->
