--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,7 +19,7 @@
                 <div class="well-left">
                     <div class="single-well">
                         <a href="#">
-                            <img src="{{ page.image-link }}" alt="">
+                            <img src="{{ page.img }}" alt="">
                         </a>
                     </div>
                 </div>
