--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -18,7 +18,7 @@
                     <div class="single-team-member">
                     <div class="team-img">
                         <a href="#">
-                            <img src="{{ member.pict }}" alt="">
+                            <img src="{{ member.img }}" alt="">
                         </a>
                         {% if member.links %}
                             <div class="team-social-icon text-center">
