--- a/_includes/knight/about.html
+++ b/_includes/knight/about.html
@@ -10,7 +10,7 @@
         <div class="row">
         <div class="col-lg-6" data-aos="fade-right">
             <div class="image">
-            <img src="{{ page.image-link }}" class="img-fluid" alt="">
+            <img src="{{ page.img }}" class="img-fluid" alt="">
             </div>
         </div>
         <div class="col-lg-6" data-aos="fade-left">
