--- a/_includes/knight/team.html
+++ b/_includes/knight/team.html
@@ -13,7 +13,7 @@
           <div class="col-lg-4 col-md-6 d-flex alighn-items-stretch">
             <div class="member" data-aos="zoom-in" data-aos-delay="{{ member.order | minus: 1 | times: 100 }}">
               <div class="member-img">
-                <img src="{{ member.pict }}"
+                <img src="{{ member.img }}"
                   style="width: 100%; height: 100%"
                   class="img-fliud"
                   alt="{{ member.alt-text }}">
